# hatebpy

./: README.md  pyproject.toml
docs/: usage.md
example/: example.py
example/environment_variables/: __init__.py
src/hatebpy/: __init__.py  _api.py  _auth.py  _cli.py  _feed.py  model.py
